# SimpleRustCompiler

./: .clang-tidy  .gitignore  CMakeLists.txt  build.sh  prepare.sh  readme.md
cmake/: CompileOptions.cmake
examples/: arrays.rs  break.rs  fibbonacci_factorial.rs  foo.rs  for.rs  func.rs  main.rs  min_elem.rs  nod.rs  operation.rs  return.rs  struct.rs  substr.rs  trait.rs
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/app/: main.cpp
src/grammar/: CMakeLists.txt  generate_files.sh
src/grammar/grammar/: .gitignore  RustLang.g4
src/rustlib/: CMakeLists.txt
src/rustlib/ErrorListener/: error_listener.hpp
src/rustlib/codegenerator/: codegenerator.cpp  codegenerator.hpp
src/rustlib/parser/: parser.cpp  parser.hpp
src/rustlib/parser/ast/: ast.hpp  visitor.cpp  visitor_initialiser.cpp  visitor_traverse.cpp
src/rustlib/parser/ast/nodes/: agr_list.cpp  arr_access.cpp  assign.cpp  break.cpp  call.cpp  expr.cpp  for.cpp  function.cpp  if.cpp  loop.cpp  mod.cpp  program.cpp  return.cpp  scope.cpp  struct_def.cpp  struct_impl.cpp  trait_def.cpp  trait_impl.cpp  value.cpp  while.cpp
src/rustlib/symbol_table/: symbol_table.cpp  symbol_table.hpp
tests/: .clang-tidy  CMakeLists.txt
tests/rustlib/: astTest.cpp  lexerTest.cpp
